compiler/testData/diagnostics/testsWithStdLib/experimental/experimentalBeforeRelease.kt
// FIR_IDENTICAL
// !LANGUAGE: -OptInRelease

@<!EXPERIMENTAL_IS_NOT_ENABLED!>RequiresOptIn<!>
@Retention(AnnotationRetention.BINARY)
annotation class Marker
